@@ -1,7 +1,6 @@
 ptpi <-
-function (series,
-          sigma = gamma, gamma = 1, delta = 0,
-          m = length(init) - n - 2L, n = 1L, init,
+function (series, sigma = 1, gamma = 1, delta = 0,
+          m = 1L, n = 1L, init,
           start = tsp(series)[1L], end = tsp(series)[2L],
           tol = 1e-03, iter.max = 32L,
           backcalc = FALSE, complete = FALSE, ...)
