@@ -11,8 +11,8 @@ estimate.
 }
 \usage{
 fastbeta.bootstrap(r,
-                   series, sigma = gamma, gamma = 1, delta = 0,
-                   m = length(init) - n - 2L, n = 1L, init, \dots)
+                   series, sigma = 1, gamma = 1, delta = 0,
+                   m = 1L, n = 1L, init, \dots)
 }
 \arguments{
 \item{r}{
